[Glitch] Fix double border on column filter on narrow screens
Port 784e0885333769b47c8a94fde0c34bb14b1b93bb to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -7933,6 +7933,11 @@ img.modal-warning {
   display: flex;
   flex-shrink: 0;
 
+  @media screen and (max-width: $no-gap-breakpoint) {
+    border-right: 0;
+    border-left: 0;
+  }
+
   button {
     background: transparent;
     border: 0;
